force-app/main/default/objects/ssot__ConversationReasonCategory__dlm/fields/ssot__AverageDurationSecondsNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AverageDurationSecondsNumber__c</fullName>
    <label>Average Duration Seconds</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AverageDurationSecondsNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>