force-app/main/default/objects/ssot__ConversationReasonCategory__dlm/fields/ssot__AverageNumOfTurnsConversationNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AverageNumOfTurnsConversationNumber__c</fullName>
    <label>Average Number of Conversation Turns</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AverageNumOfTurnsConversationNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>