force-app/main/default/objects/ssot__ConversationReasonCategory__dlm/fields/ssot__FrequencyPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__FrequencyPercent__c</fullName>
    <label>Frequency Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FrequencyPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>